@@ -1,0 +1,57 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  min_layer = 0,
+  max_layer = 2,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+destination{
+  name = "destination",
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 0,
+}
+
+custom_entity{
+  name = "custom_entity",
+  layer = 0,
+  x = 40,
+  y = 29,
+  direction = 3,
+  sprite = "enemies/slime_green",
+}
+
+npc{
+  name = "npc",
+  layer = 0,
+  x = 24,
+  y = 45,
+  direction = 2,
+  subtype = 1,
+  sprite = "main_heroes/edgar",
+}
+
+block{
+  name = "block",
+  layer = 0,
+  x = 40,
+  y = 45,
+  sprite = "entities/block",
+  pushable = true,
+  pullable = false,
+  maximum_moves = 1,
+}
+
