@@ -78,6 +78,8 @@ Changes that do not introduce incompatibilities:
 * map:get_entities*() functions now give entities sorted in Z order (#779).
 * Add a method entity:get_max_bounding_box() considering sprite boxes (#754).
 * entity:get_center_position() now also returns the layer.
+* Add a method entity:get_facing_position().
+* Add a method entity:get_facing_entity() (#877).
 * Add a method entity:get_ground_position() (#830).
 * Add a method entity:get_ground_below() (#830).
 * entity:set_optimization_distance() is now only a hint for the engine.
